src/styles/styles.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;

  min-height: 100vh;

  --bg-color: hsl(212, 75%, 83%);
  --tile-color: hsl(212, 75%, 72%);
  --line-color: hsl(230, 50%, 28%);
  --edge-color: hsl(230, 50%, 34%);

  --tile-size: min(calc((90vh - 16rem)  / 6.4), calc((100vw - 2em) / 6.4));

  --color-red: #F43F5E;
  --color-red-dark: #BE123C;
  --color-blue: #3b82f6;
  --color-blue-dark: #1e3fae;
  --color-green: #10B981;
  --color-green-dark: #047857;
  --color-yellow: #EAB308;
  --color-yellow-dark: #a26107;
  --color-purple: #8B5CF6;
  --color-purple-dark: #6D28D9;
  --color-orange: #F97316;
  --color-orange-dark: #C2410C;
  --color-black: #44403C;
  --color-black-dark: #1C1917;
  --color-white: #F5F5F4;
  --color-white-dark: #D6D3D1;
}

body {
  padding: 1rem;
  box-sizing: border-box;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

